@@ -2,6 +2,8 @@
   * Fixed bug in the raw BGRA coders (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16880).
   * Fix off-by-one error in the PSD coders.
+  * Nicolas Robidoux with the assistance of Chantal Racette contribute an
+    approximation of the sinc function over the interval [-3,3].
 
 2010-08-15  6.6.3-7 Cristy  <quetzlzacatenango@image...>
   * Throw exception if image size differs for the compare program but the
